# src/controller/auth.controller.ts
@@ -23,8 +23,34 @@ const registerValidateSchema = Yup.object({
     fullName: Yup.string().required(),
     username: Yup.string().required(),
     email: Yup.string().email().required(),
-    password: Yup.string().required(),
-    confirmPassword: Yup.string().required().oneOf([Yup.ref("password"), ""], "Password not match"),
+    password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+        "at-least-one-uppercase-letter",
+        "Contains at least one uppercase letter", 
+        (value) => {
+            
+            //untuk nge-Test sudah sesuai kriteria pssword yg diinginkan
+            if(!value) return false;
+            const regex = /^(?=.*[A-Z])/;
+            return regex.test(value)
+            
+        })
+        .test(
+        "at-least-one-uppercase-letter",
+        "Contains at least one uppercase letter", 
+        (value) => {
+            
+            //untuk nge-Test sudah sesuai kriteria pssword yg diinginkan
+            if(!value) return false;
+            const regex = /^(?=.*\d)/;
+            return regex.test(value)
+            
+        }),
+    confirmPassword: Yup.string()
+    .required()
+    .oneOf([Yup.ref("password"), ""], "Password not match"),
 })
 export default {
         // register user
@@ -85,7 +111,8 @@ export default {
                 {
                 username: identifier
                 }
-            ]
+            ],
+            isActive: true,
             })
             
             // validasi username/email
@@ -142,6 +169,42 @@ export default {
                 messages: "Success get user profile",
                 data: result,
             })
+        } catch(error){
+            const err = error as unknown as Error
+            res.status(400).json({
+                messages: err.message,
+                data: null,
+            })          
+        }
+    },
+
+    async activation(req: Request, res: Response){
+        /**
+            #swagger.tags = ['Auth']
+            #swagger.requestBody = {
+                required: true,
+                schema: {$ref: '#/components/schemas/ActivationRequest'}
+            }
+         */
+        try{
+            const { code } = req.body as {code: string };
+
+            const user = await UserModel.findOneAndUpdate(
+                {
+                    activationCode: code,
+                },
+                {
+                    isActive: true,
+                },
+                {
+                    new: true,
+                }
+            )
+            res.status(200).json({
+                    messages: "user successfully activated",
+                    data: user,
+                }
+            )
         } catch(error){
             const err = error as unknown as Error
             res.status(400).json({
